--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,9 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -26,6 +29,7 @@
           <li class="active"><a ng-href="#">Home</a></li>
           <!-- //angularfire -->
           <li><a ng-href="#/chat">chat</a></li>
+          <li><a ng-href="#/create" ng-show-auth="">Create</a></li>
           <li>
             <a ng-hide-auth="" href="#/login">log in</a>
             <a ng-show-auth="" href="#/account">account</a>
@@ -83,6 +87,15 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="bower_components/showdown/src/showdown.js"></script>
+    <script src="bower_components/angular-markdown-directive/markdown.js"></script>
+    <script src="bower_components/rangy/rangy-core.min.js"></script>
+    <script src="bower_components/rangy/rangy-cssclassapplier.min.js"></script>
+    <script src="bower_components/rangy/rangy-selectionsaverestore.min.js"></script>
+    <script src="bower_components/rangy/rangy-serializer.min.js"></script>
+    <script src="bower_components/textAngular/src/textAngular.js"></script>
+    <script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
+    <script src="bower_components/textAngular/src/textAngularSetup.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -99,6 +112,9 @@
         <script src="scripts/directives/ngShowAuth.js"></script>
         <script src="scripts/directives/ngHideAuth.js"></script>
         <script src="scripts/routes.js"></script>
+        <script src="scripts/controllers/create.js"></script>
+        <script src="scripts/services/publisher.js"></script>
+        <script src="scripts/services/articleretriever.js"></script>
         <!-- endbuild -->
 </body>
 </html>
