--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,8 @@
         <script src="scripts/controllers/create.js"></script>
         <script src="scripts/services/publisher.js"></script>
         <script src="scripts/services/articleretriever.js"></script>
+        <script src="scripts/services/fb.js"></script>
+        <script src="scripts/controllers/read.js"></script>
         <!-- endbuild -->
 </body>
 </html>
