going for a nap

--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
     <script src="bower_components/textAngular/src/textAngular.js"></script>
     <script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
     <script src="bower_components/textAngular/src/textAngularSetup.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -117,6 +118,11 @@
         <script src="scripts/services/articleretriever.js"></script>
         <script src="scripts/services/fb.js"></script>
         <script src="scripts/controllers/read.js"></script>
+        <script src="scripts/directives/article-info.js"></script>
+        <script src="scripts/controllers/article-info.js"></script>
+        <script src="scripts/services/userprovider.js"></script>
+        <script src="scripts/services/approuter.js"></script>
+        <script src="scripts/controllers/author.js"></script>
         <!-- endbuild -->
 </body>
 </html>
