Added API query

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,8 @@
         <script src="scripts/services/userprovider.js"></script>
         <script src="scripts/services/approuter.js"></script>
         <script src="scripts/controllers/author.js"></script>
+        <script src="scripts/services/decusprovider.js"></script>
+        <script src="scripts/controllers/decusdata.js"></script>
         <!-- endbuild -->
 </body>
 </html>
